<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/bottom_bar_previous"
        android:layout_width="@dimen/bottom_bar_icon_size"
        android:layout_height="@dimen/bottom_bar_icon_size"
        android:contentDescription="@string/previous"
        android:padding="@dimen/bottom_bar_icon_padding"
        android:src="@drawable/skip_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bottom_bar_play_pause"
        android:layout_width="@dimen/bottom_bar_icon_size"
        android:layout_height="@dimen/bottom_bar_icon_size"
        android:contentDescription="@string/description_play_pause"
        android:padding="@dimen/bottom_bar_icon_padding"
        android:src="@drawable/play"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar_previous"
        app:layout_constraintStart_toEndOf="@id/bottom_bar_previous"
        app:layout_constraintTop_toTopOf="@id/bottom_bar_previous" />

    <ImageView
        android:id="@+id/bottom_bar_next"
        android:layout_width="@dimen/bottom_bar_icon_size"
        android:layout_height="@dimen/bottom_bar_icon_size"
        android:contentDescription="@string/next"
        android:padding="@dimen/bottom_bar_icon_padding"
        android:src="@drawable/skip_next"
        app:layout_constraintBottom_toBottomOf="@id/bottom_bar_previous"
        app:layout_constraintStart_toEndOf="@id/bottom_bar_play_pause"
        app:layout_constraintTop_toTopOf="@id/bottom_bar_previous" />

    <ImageView
        android:id="@+id/bottom_bar_delete"
        android:layout_width="@dimen/bottom_bar_icon_size"
        android:layout_height="@dimen/bottom_bar_icon_size"
        android:contentDescription="@string/delete"
        android:padding="@dimen/bottom_bar_icon_padding"
        android:src="@drawable/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bottom_bar_playlist"
        android:layout_width="@dimen/bottom_bar_icon_size"
        android:layout_height="@dimen/bottom_bar_icon_size"
        android:contentDescription="@string/description_show_playlist"
        android:padding="@dimen/bottom_bar_icon_padding"
        android:src="@drawable/playlist_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_bar_delete" />

    <TextView
        android:id="@+id/bottom_bar_music_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="Potentially very long MUSIC name that should scroll automatically"
        android:textSize="@dimen/bottom_bar_music_name_text_size"
        app:layout_constraintEnd_toStartOf="@id/bottom_bar_delete"
        app:layout_constraintStart_toEndOf="@id/bottom_bar_next"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/bottom_bar_music_artist"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="Potentially very long ARTIST name that should scroll automatically"
        android:textSize="@dimen/bottom_bar_music_artist_text_size"
        app:layout_constraintEnd_toEndOf="@id/bottom_bar_music_name"
        app:layout_constraintStart_toStartOf="@id/bottom_bar_music_name"
        app:layout_constraintTop_toBottomOf="@id/bottom_bar_music_name"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/bottom_bar_music_album"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="Potentially very long ALBUM name that should scroll automatically"
        android:textSize="@dimen/bottom_bar_music_album_text_size"
        app:layout_constraintEnd_toEndOf="@id/bottom_bar_music_name"
        app:layout_constraintStart_toStartOf="@id/bottom_bar_music_name"
        app:layout_constraintTop_toBottomOf="@id/bottom_bar_music_artist"
        tools:ignore="HardcodedText" />
</androidx.constraintlayout.widget.ConstraintLayout>